--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,6 @@
 pythonpath = .
 testpaths = tests
 python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+addopts = -v --tb=short
